# budget_tracker

./: .gitignore  .gitignore.txt  .gitlab-ci.yml  404.html  LICENSE  README.md  alembic.ini  budget.db  categories.example.json  exclude_keywords.example.json  formats.json  index.html  keywords.example.json  migrate_add_excluded.py  migrate_add_is_income.py  mkdocs.yml  notes.txt  pyproject.toml  requirements.txt  seed_budgets.example.py  seed_categories.py  sitemap.xml
.github/workflows/: docs.yml  tests.yml
alembic/: env.py
alembic/versions/: 57dc43071454_add_savings_tables.py  5aa95d17712d_add_is_expense_and_is_savings_to_.py  add_split_transactions.py
backup/: index.html
budget/: index.html
categories/: index.html
data/: budget.db
development/: index.html
docs/: backup.md  budget.md  categories.md  development.md  importing.md  index.md  keywords.md  setup.md
importing/: index.html
keywords/: index.html
scripts/: backup_db.py
search/: search_index.json
setup/: index.html
src/: budget.db  categorizer.py  database.py  deps.py  import_transactions.py  main.py  models.py  schemas.py
src/routers/: categories.py  imports.py  pages.py  savings.py  transactions.py
src/services/: aggregations.py  budget.py
src/static/: style.css
src/templates/: base.html  budget.html  budget_manage.html  categories.html  dashboard.html  docs.html  review.html  savings.html  transactions.html
tests/: conftest.py  test_api_categories.py  test_api_import.py  test_api_savings.py  test_api_savings_import.py  test_api_split.py  test_api_transactions.py  test_budget.py  test_categorizer.py  test_duplicate.py  test_formats.py  test_import.py  test_pages.py  test_parsing.py  test_services.py
